Advanced PDF report features.